--- a/Fourteenthclass/css/main.css
+++ b/Fourteenthclass/css/main.css
@@ -2,4 +2,9 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+.row .card img {
+  width: 100px;
+  height: 200px;
+}
+
 /*# sourceMappingURL=main.css.map */
